--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,6 +1,7 @@
 html, body{
     margin: 0;
     padding: 0;
+    background-color: #FFF4EB;
 }
 
 .frame{
@@ -15,7 +16,18 @@ html, body{
 }
 
 #menu{
-    height: 5vh;
+    margin-top: 0;
+    height: 10vh;
+}
+
+#footer{
+    flex: 1;
+    border-top: 2px solid #072935;
+}
+
+.socials{
+    text-decoration: none;
+    padding: 0 1vw;
 }
 
 
