--- a/public/css/menu.css
+++ b/public/css/menu.css
@@ -2,10 +2,21 @@ body{
     background-color: #072935;
 }
 
+#menu{
+    margin-top: 0;
+    height: 70vh;
+    display:flex;
+    justify-content: center;
+    align-items:center;
+}
+
 a{
-    color: #e9f7fc;
-    padding-right: 5vw;
-    padding-left: 5vw;
-    font-size: 100%;
+    color: #e9f7fc; 
     text-decoration: none;
+    font-size: 1.5vw;
+    padding: 0 5vw;
+}
+
+a:hover{
+    color: #68B0AB;
 }
