Added conditional styling for menu items

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -12,7 +12,14 @@
     margin-left: 5vw;
     margin-right: 5vw;
     font-size: 1.3vw;
+}
+
+.inactiveMenu{
     color: #e9f7fc;
+}
+
+.activeMenu{
+    color: #68B0AB;
 }
 
 .menu li:hover{
