--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -40,10 +40,18 @@ li{
     white-space: pre-wrap;
 }
 
-#project{
-    background-color: #68B0AB;
+.project{
+    border-width: 2px;
+    border-style: solid;
+    border-color: #68B0AB;
     margin-right: 40px;
     text-align: left;
+}
+
+.project:hover{
+    background-color: #68B0AB;
+    font-size: 20px;
+
 }
 
 .project_img{
